--- a/.screenrc
+++ b/.screenrc
@@ -1,3 +1,16 @@
+# I like a large scrollback buffer.
+defscrollback 1000
+# clear scrollback buffer
+bind F eval 'scrollback 0' 'scrollback 1000' 'echo "scrollback buffer cleared"'
+
+# changes the name of logfile.
+logfile 'screen/log/screenlog.%H.%Y%m%d-%02c:%s-%n.%t.log'
+logtstamp on
+logtstamp string "\n-- SCREEN [%Y/%m/%d %02c:%s] %n:%t --\n"
+
+# changes the kind of messages to the nethack-style.
+nethack on
+
 # onにしておくとscreenがいきなりお亡くなりになられても、その時のプロセスは生きて残る
 autodetach on
 bell_msg "^G"
@@ -13,6 +26,8 @@ startup_message off
 vbell off
 
 # caption always "%{= wb} %-w%{=bu dr}%n %t%{-}%+w %= %{=b wk} [%l] %{=b wb}%y/%m/%d(%D) %{=b wm}%c"
+caption always '%?%F%{= gW}%:%{= Kk}%?%2n%f%07=%t%='
+hardstatus alwayslastline '%m/%d %02c:%s %{= .g}%H%{-} %L=%-w%45L>%{=u g.}%n %t%{-}%+w %-17<%=%{= .y}(%l)'
 bind n screen
 bind h prev
 bind j next
@@ -21,14 +36,18 @@ bind l windowlist
 #split window
 bind s eval split focus "select 0"
 bind ^s eval split focus "select 0"
+# 縦分割
+bind V split -v
 
 #resize
-bind r eval 'command -c resize'
-bind ^r eval 'command -c resize'
-bind + eval 'command -c resize'
-bind - eval 'command -c resize'
-bind -c resize j eval 'resize +1' 'command -c resize'
-bind -c resize k eval 'resize -1' 'command -c resize'
+bind r eval 'command -c cresize'
+bind -c cresize j eval 'resize +1'  'command -c cresize'
+bind -c cresize k eval 'resize -1'  'command -c cresize'
+bind -c cresize J eval 'resize +10' 'command -c cresize'
+bind -c cresize K eval 'resize -10' 'command -c cresize'
+bind -c cresize = eval 'resize ='   'command -c cresize'
+bind -c cresize n eval 'resize min' 'command -c cresize'
+bind -c cresize x eval 'resize max' 'command -c cresize'
 
 #move current window
 bind j focus down
