--- a/.gitmodules
+++ b/.gitmodules
@@ -48,7 +48,7 @@
 	url = git://github.com/petdance/vim-perl.git
 [submodule ".vim/bundle/quickrun"]
 	path = .vim/bundle/quickrun
-	url = git://github.com/ujihisa/quickrun.git
+	url = git://github.com/thinca/vim-quickrun.git
 [submodule ".vim/bundle/perldoc-vim"]
 	path = .vim/bundle/perldoc-vim
 	url = https://github.com/hotchpotch/perldoc-vim.git
