--- a/.gitmodules
+++ b/.gitmodules
@@ -3,52 +3,49 @@
 	url = https://github.com/msanders/snipmate.vim
 [submodule ".vim/bundle/EnhCommentify.vim"]
 	path = .vim/bundle/EnhCommentify.vim
-	url = git://github.com/vim-scripts/EnhCommentify.vim.git
+	url = https://github.com/vim-scripts/EnhCommentify.vim.git
 [submodule ".vim/bundle/git-vim"]
 	path = .vim/bundle/git-vim
-	url = git://github.com/motemen/git-vim.git
-[submodule ".vim/bundle/gundo.vim"]
-	path = .vim/bundle/gundo.vim
-	url = git://github.com/sjl/gundo.vim.git
+	url = https://github.com/motemen/git-vim.git
 [submodule ".vim/bundle/neocomplcache"]
 	path = .vim/bundle/neocomplcache
-	url = git://github.com/Shougo/neocomplcache.git
+	url = https://github.com/Shougo/neocomplcache.git
 [submodule ".vim/bundle/unite.vim"]
 	path = .vim/bundle/unite.vim
-	url = git://github.com/Shougo/unite.vim.git
+	url = https://github.com/Shougo/unite.vim.git
 [submodule ".vim/bundle/vimshell"]
 	path = .vim/bundle/vimshell
-	url = git://github.com/Shougo/vimshell.git
+	url = https://github.com/Shougo/vimshell.git
 [submodule ".vim/bundle/vimproc"]
 	path = .vim/bundle/vimproc
-	url = git://github.com/Shougo/vimproc.git
+	url = https://github.com/Shougo/vimproc.git
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
-	url = git://github.com/scrooloose/nerdtree.git
+	url = https://github.com/scrooloose/nerdtree.git
 [submodule ".vim/bundle/vim-pathogen"]
 	path = .vim/bundle/vim-pathogen
-	url = git://github.com/tpope/vim-pathogen.git
+	url = https://github.com/tpope/vim-pathogen.git
 [submodule ".vim/bundle/vim-surround"]
 	path = .vim/bundle/vim-surround
-	url = git://github.com/tpope/vim-surround.git
+	url = https://github.com/tpope/vim-surround.git
 [submodule ".vim/bundle/xoria256.vim"]
 	path = .vim/bundle/xoria256.vim
-	url = git://github.com/vim-scripts/xoria256.vim.git
+	url = https://github.com/vim-scripts/xoria256.vim.git
 [submodule ".vim/bundle/vim-ref"]
 	path = .vim/bundle/vim-ref
-	url = git://github.com/thinca/vim-ref.git
-[submodule ".vim/bundle/zencoding-vim"]
-	path = .vim/bundle/zencoding-vim
-	url = git://github.com/mattn/zencoding-vim.git
+	url = https://github.com/thinca/vim-ref.git
+[submodule ".vim/bundle/emmet-vim"]
+	path = .vim/bundle/emmet-vim
+	url = https://github.com/mattn/emmet-vim.git
 [submodule ".vim/bundle/perlomni.vim"]
 	path = .vim/bundle/perlomni.vim
-	url = git://github.com/c9s/perlomni.vim.git
+	url = https://github.com/c9s/perlomni.vim.git
 [submodule ".vim/bundle/vim-perl"]
 	path = .vim/bundle/vim-perl
-	url = git://github.com/petdance/vim-perl.git
+	url = https://github.com/petdance/vim-perl.git
 [submodule ".vim/bundle/quickrun"]
 	path = .vim/bundle/quickrun
-  url = git://github.com/ujihisa/quickrun.git
+  url = https://github.com/ujihisa/quickrun.git
 [submodule ".vim/bundle/perldoc-vim"]
 	path = .vim/bundle/perldoc-vim
 	url = https://github.com/hotchpotch/perldoc-vim.git
@@ -60,10 +57,16 @@
 	url = https://github.com/vim-scripts/tagexplorer.vim.git
 [submodule ".vim/bundle/open-browser.vim"]
 	path = .vim/bundle/open-browser.vim
-	url = git://github.com/tyru/open-browser.vim.git
+	url = https://github.com/tyru/open-browser.vim.git
 [submodule ".vim/bundle/sudo.vim"]
 	path = .vim/bundle/sudo.vim
-	url = git://github.com/vim-scripts/sudo.vim.git
+	url = https://github.com/vim-scripts/sudo.vim.git
 [submodule ".vim/sudo.vim"]
 	path = .vim/sudo.vim
-	url = git://github.com/vim-scripts/sudo.vim.git
+	url = https://github.com/vim-scripts/sudo.vim.git
+[submodule ".vim/undotree"]
+	path = .vim/undotree
+	url = https://github.com/mbbill/undotree.git
+[submodule ".vim/bundle/undotree"]
+	path = .vim/bundle/undotree
+	url = https://github.com/mbbill/undotree.git
