--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,7 @@ bind - split-window -v
 set-option -g base-index 1
 
 # マウス操作を有効にする
-set-option -g mouse on
+# set-option -g mouse on
 
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
