--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -108,3 +108,7 @@ repo = 'ryanolsonx/vim-lsp-typescript'
 
 [[plugins]]
 repo = 'leafgarland/typescript-vim'
+
+[[plugins]]
+repo = 'fatih/vim-go'
+on_ft = 'go'
