--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -15,6 +15,8 @@
         "javascriptreact"
     ],
     "list.autoResize": true,
+    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
+    "python.jediEnabled": false,
     "languageserver": {
         "golang": {
             "command": "gopls",
