--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # tmux起動時のシェルをzshにする
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /usr/bin/zsh
 
 # tmuxを256色表示できるようにする
 set-option -g default-terminal screen-256color
@@ -12,7 +12,7 @@ set -g prefix C-j
 unbind C-b
 
 # ステータスバーをトップに配置する
-set-option -g status-position top
+#set-option -g status-position top
 
 
 # vimのキーバインドでペインを移動する
