--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,20 +27,28 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# 画面分割や新しいタブで新しいpaneを作った際に、その新しいシェルのカレントディレクトリは、命令を出したディレクトリではなくホームディレクトリになったしまう。
+# カレントディレクトリに変更
+bind c new-window -c "#{pane_current_path}"
+
 # | でペインを縦分割する
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
 # - でペインを縦分割する
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 # 番号基準値を変更
 set-option -g base-index 1
 
 # マウス操作を有効にする
-# set-option -g mouse on
+set-option -g mouse on
+#set -g mouse on
 
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+#bind-key -T edit-mode-vi WheelUpPane send-keys -X scroll-up
+#bind-key -T edit-mode-vi WheelDownPane send-keys -X scroll-down
 #bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # コピーモードを設定する
