--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # tmux起動時のシェルをzshにする
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /usr/bin/zsh
 
 # tmuxを256色表示できるようにする
 set-option -g default-terminal screen-256color
