--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,8 @@
 set-option -g default-shell /usr/bin/zsh
 
 # tmuxを256色表示できるようにする
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+#set-option -g default-terminal screen-256color
+#set -g terminal-overrides 'xterm:colors=256'
 
 # ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
@@ -117,4 +117,4 @@ bind -T copy-mode-vi y send -X copy-selection
 bind -T copy-mode-vi Y send -X copy-line
 
 # 'C-p'でペースト
-bind-key C-p paste-buffer
+bind-key C-S-p paste-buffer
