--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,19 +4,24 @@ set-option -g default-shell /usr/bin/zsh
 # tmuxを256色表示できるようにする
 #set-option -g default-terminal screen-256color
 #set -g terminal-overrides 'xterm:colors=256'
+#set -g default-terminal "xterm-256color"
+#set -ga terminal-overrides ",*256col*:Tc"
+#set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",tmux-256color:Tc,xterm-256color:Tc"
 
 # ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
 set -g visual-activity on
 
 ## Escキーの遅延を解消
-set -s escape-time 0
-
-# prefixキーをC-qに変更
-set -g prefix C-a
+set -s escape-time 10
 
 # C-bのキーバインドを解除
 unbind C-b
+
+# prefixキーをC-aに変更
+set -g prefix C-a
 
 # ステータスバーをトップに配置する
 #set-option -g status-position top
@@ -41,7 +46,7 @@ set -g status-left '#[fg=cyan,bold][#H #S]#[default]'
 ##[fg=cyan]Pane: #P \
 ##[bg=colour054,fg=colour255] #{=21:pane_title} \
 #'
-set -g status-right '#[fg=blue,bold][%Y-%m-%d (%a) %H:%M:%S]#[default]'
+set -g status-right '#[fg=white,bold][%Y-%m-%d (%a) %H:%M:%S]#[default]'
 set-option -g message-style bg=red,fg=white
 set-option -g status-style bg=black,fg=yellow,dim
 
@@ -53,6 +58,15 @@ setw -g window-status-current-format '#[bg=colour2,fg=colour255]#{?client_prefix
 set-window-option -g window-status-current-style bg=blue,dim
 setw -g window-status-format '#[fg=colour242] #I #W '
 set-window-option -g window-status-style fg=blue,bg=black,dim,fg=brightblue
+
+# default statusbar colors
+set-option -g status-style bg=colour235,fg=colour136,default
+
+# default window title colors
+#set-window-option -g window-status-style fg=colour244,bg=colour234,dim
+
+# active window title colors
+#set-window-option -g window-status-current-style fg=colour166,bg=default,bright
 
 # vimのキーバインドでペインを移動する
 bind h select-pane -L
