--- a/.tmux.conf
+++ b/.tmux.conf
@@ -110,10 +110,22 @@ bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 set-window-option -g mode-keys vi
 setw -g mode-keys vi
 
+# OS が Linux の時は xsel を使う
+if-shell -b '[ "$(uname)" = "Linux" ]' {
+  set -s copy-command "xsel --clipboard --input"
+  bind-key -T copy-mode-vi v send-keys -X begin-selection
+  bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -bi"
+  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -bi"
+  display "using xsel as copy-command"
+}
+
 ## ☆クリップボートとの連携（Mac）
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+if-shell -b '[ "$(uname)" = "Darwin" ]' {
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+  bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+}
 
 # 'v' で選択を始める
 bind -T copy-mode-vi v send -X begin-selection
