--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ set -g prefix C-a
 # prefix + rで設定ファイルをリロードする。.tmux.conf を変更したらリロード！
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-set -g status-interval 1
+#set -g status-interval 1
 set -g status-left-length 50
 #set -g status-right-length 50
 ## status-right の最大の長さを指定する。
@@ -46,7 +46,7 @@ set -g status-left '#[fg=cyan,bold][#H #S]#[default]'
 ##[fg=cyan]Pane: #P \
 ##[bg=colour054,fg=colour255] #{=21:pane_title} \
 #'
-set -g status-right '#[fg=white,bold][%Y-%m-%d (%a) %H:%M:%S]#[default]'
+#set -g status-right '#[fg=white,bold][%Y-%m-%d (%a) %H:%M:%S]#[default]'
 set-option -g message-style bg=red,fg=white
 set-option -g status-style bg=black,fg=yellow,dim
 
