--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,11 @@ set-option -g default-shell /bin/zsh
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",tmux-256color:Tc,xterm-256color:Tc"
 
+# weztermのhyperlink機能を有効にする
+set -as terminal-features 'xterm*:hyperlinks'
+set -as terminal-features 'wezterm*:hyperlinks'
+set -as terminal-features 'tmux-256color:hyperlinks'
+
 # ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
 set -g visual-activity on
@@ -98,6 +103,9 @@ set-option -g base-index 1
 # マウス操作を有効にする
 set-option -g mouse on
 set -g mouse on
+
+# フォーカスイベントを有効にして、weztermとの互換性を向上
+set-option -g focus-events on
 
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
