--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,9 @@ set-option -ga terminal-overrides ",tmux-256color:Tc,xterm-256color:Tc"
 set -as terminal-features 'xterm*:hyperlinks'
 set -as terminal-features 'wezterm*:hyperlinks'
 set -as terminal-features 'tmux-256color:hyperlinks'
+# NeovimのLSP診断などで波線アンダーラインが正しく表示されるようになる
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'          # undercurlサポート
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d::%p1%{255}%&%dm'
 
 # ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
@@ -28,33 +31,38 @@ set -s escape-time 10
 # prefixキーをC-aに変更
 #set -g prefix C-a
 
+# ステータスバーをトップに配置する
+#set-option -g status-position top
+
 # prefix + rで設定ファイルをリロードする。.tmux.conf を変更したらリロード！
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 #set -g status-interval 1
 set -g status-left-length 50
-#set -g status-right-length 50
 ## status-right の最大の長さを指定する。
 set-option -g status-right-length 50
-
 set -g status-bg black
 set -g status-fg white
 set -g status-left '#[fg=cyan,bold][#H #S]#[default]'
-
-#set-option -g status-left ' \
-##[fg=cyan]#{?client_prefix,#[reverse],} #H   \
-##[fg=green]Session: #S \
-##[fg=yellow]Window: #I \
-##[fg=cyan]Pane: #P \
-##[bg=colour054,fg=colour255] #{=21:pane_title} \
-#'
-#set -g status-right '#[fg=white,bold][%Y-%m-%d (%a) %H:%M:%S]#[default]'
-#set -g status-right '#[fg=white,bold][%Y-%m-%d(%a)]#[default]'
 set-option -g message-style bg=red,fg=white
 set-option -g status-style bg=black,fg=yellow,dim
-
 set-option -g pane-border-style fg=black
 set-option -g pane-active-border-style fg=brightgreen
+
+# --- NEW ----
+
+set -g status-interval 1
+set -g status-justify centre
+set -g status-style bg=default,fg=colour250
+set -g status-left "#[fg=colour39,bg=default] #S #[default]"
+set -g status-right "#[fg=colour39,bg=default] %Y-%m-%d %H:%M #[fg=colour250] | #[fg=colour39]#(whoami)@#h "
+set -g window-status-current-style fg=colour39,bg=default,bold
+set -g window-status-current-format "#[fg=colour39,bg=default] #I:#W#F "
+
+set -g pane-border-style fg=colour237
+set -g pane-active-border-style fg=colour39
+
+# ---
 
 # prefixを押したときに、押されていることがわかるようにwindow-status-current-formatを次のように変更します。
 setw -g window-status-current-format '#[bg=colour2,fg=colour255]#{?client_prefix,#[bg=colour3],} #I #W '
@@ -97,6 +105,27 @@ bind | split-window -h -c "#{pane_current_path}"
 # - でペインを縦分割する
 bind - split-window -v -c "#{pane_current_path}"
 
+bind-key -n M-n next-window      # Option + n で次（M- = Alt/Option）
+bind-key -n M-p previous-window
+
+# Option + h/l で左右のペイン移動（vimライク）
+bind-key -n M-h select-pane -L
+bind-key -n M-l select-pane -R
+bind-key -n M-j select-pane -D
+bind-key -n M-k select-pane -U
+
+# Option + 数字で直接ウィンドウ選択（ブラウザ感覚）
+bind-key -n M-1 select-window -t :=1
+bind-key -n M-2 select-window -t :=2
+bind-key -n M-3 select-window -t :=3
+bind-key -n M-4 select-window -t :=4
+bind-key -n M-5 select-window -t :=5
+bind-key -n M-6 select-window -t :=6
+bind-key -n M-7 select-window -t :=7
+bind-key -n M-8 select-window -t :=8
+bind-key -n M-9 select-window -t :=9
+bind-key -n M-0 select-window -t :=0
+
 # 番号基準値を変更
 set-option -g base-index 1
 
@@ -106,6 +135,8 @@ set -g mouse on
 
 # フォーカスイベントを有効にして、weztermとの互換性を向上
 set-option -g focus-events on
+# マウスでペインサイズ変更を有効化
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
@@ -134,7 +165,15 @@ if-shell -b '[ "$(uname)" = "Darwin" ]' {
   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
   bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
   bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+  set-window-option -g mode-keys vi
+  bind-key -T copy-mode-vi v send-keys -X begin-selection
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+  bind-key -T copy-mode-vi MouseDrag1Pane send-keys -X begin-selection
+  bind-key -T copy-mode-vi MouseUp1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 }
+
+set -g set-clipboard external     # macOSではこれでpbcopy/pbpasteと連携
 
 # 'v' で選択を始める
 bind -T copy-mode-vi v send -X begin-selection
