Enhance tmux configuration: implement Catppuccin Frappe theme, improve session management with popup features, and streamline navigation between Neovim and tmux. Update README.md to reflect new features and integration details.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,11 @@
+##### =====================================================
+##### 基本設定
+##### =====================================================
+
 # tmux起動時のシェルをzshにする
 set-option -g default-shell /bin/zsh
 
-# tmuxを256色表示できるようにする
-#set-option -g default-terminal screen-256color
-#set -g terminal-overrides 'xterm:colors=256'
-#set -g default-terminal "xterm-256color"
-#set -ga terminal-overrides ",*256col*:Tc"
-#set -ga terminal-overrides ",xterm-256color:Tc"
+# 256色・TrueColor (RGB) サポート
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",tmux-256color:Tc,xterm-256color:Tc"
 
@@ -14,107 +13,189 @@ set-option -ga terminal-overrides ",tmux-256color:Tc,xterm-256color:Tc"
 set -as terminal-features 'xterm*:hyperlinks'
 set -as terminal-features 'wezterm*:hyperlinks'
 set -as terminal-features 'tmux-256color:hyperlinks'
-# NeovimのLSP診断などで波線アンダーラインが正しく表示されるようになる
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'          # undercurlサポート
+
+# NeovimのLSP診断などで波線アンダーライン(undercurl)を有効にする
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d::%p1%{255}%&%dm'
 
-# ヴィジュアルノーティフィケーションを有効にする
+# 通知設定
 setw -g monitor-activity on
 set -g visual-activity on
 
-## Escキーの遅延を解消
+# エスケープタイムの短縮（Vimなどの操作性向上）
 set -s escape-time 10
 
-# C-bのキーバインドを解除
-#unbind C-b
-
-# prefixキーをC-aに変更
-#set -g prefix C-a
-
-# ステータスバーをトップに配置する
-#set-option -g status-position top
-
-# prefix + rで設定ファイルをリロードする。.tmux.conf を変更したらリロード！
+# 設定リロード
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-#set -g status-interval 1
-set -g status-left-length 50
-## status-right の最大の長さを指定する。
-set-option -g status-right-length 50
-set -g status-bg black
-set -g status-fg white
-set -g status-left '#[fg=cyan,bold][#H #S]#[default]'
-set-option -g message-style bg=red,fg=white
-set-option -g status-style bg=black,fg=yellow,dim
-set-option -g pane-border-style fg=black
-set-option -g pane-active-border-style fg=brightgreen
+# 番号の基準値を1からにする
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
 
-# --- NEW ----
+# フォーカスイベント・マウス設定
+set -g mouse on
+set -g focus-events on
 
+# ウィンドウ名の変更を無効化
+set -g allow-rename off
+set -g automatic-rename off
+
+# 履歴の保存期間を200000にする
+set -g history-limit 200000
+
+##### =====================================================
+##### Catppuccin Frappe Theme
+##### =====================================================
+
+# --- カラーパレット定義 ---
+# Base: #303446, Surface0: #414559, Overlay0: #737994, Text: #c6d0f5
+# Blue: #8caaee, Mauve: #ca9ee6, Green: #a6d189, Yellow: #e5c890, Red: #e78284
+
+# status bar
 set -g status-interval 1
 set -g status-justify centre
-set -g status-style bg=default,fg=colour250
-set -g status-left "#[fg=colour39,bg=default] #S #[default]"
-set -g status-right "#[fg=colour39,bg=default] %Y-%m-%d %H:%M #[fg=colour250] | #[fg=colour39]#(whoami)@#h "
-set -g window-status-current-style fg=colour39,bg=default,bold
-set -g window-status-current-format "#[fg=colour39,bg=default] #I:#W#F "
 
-set -g pane-border-style fg=colour237
-set -g pane-active-border-style fg=colour39
-
-# ---
-
-# prefixを押したときに、押されていることがわかるようにwindow-status-current-formatを次のように変更します。
-setw -g window-status-current-format '#[bg=colour2,fg=colour255]#{?client_prefix,#[bg=colour3],} #I #W '
-set-window-option -g window-status-current-style bg=blue,dim
-setw -g window-status-format '#[fg=colour242] #I #W '
-set-window-option -g window-status-style fg=blue,bg=black,dim,fg=brightblue
-
-# default statusbar colors
-set-option -g status-style bg=colour235,fg=colour136,default
-
-# ステータスバーをトップに配置する
+# ステータスバー全体
 set-option -g status-position top
+set-option -g status-style "bg=#303446,fg=#c6d0f5"
 
-# default window title colors
-#set-window-option -g window-status-style fg=colour244,bg=colour234,dim
+# メッセージライン（Prefix + : を押した時など）
+set-option -g message-style "bg=#414559,fg=#ca9ee6,bold"
+set -g message-command-style "bg=#414559,fg=#ca9ee6"
 
-# active window title colors
-#set-window-option -g window-status-current-style fg=colour166,bg=default,bright
+# ペインの境界線
+set-option -g pane-border-style "fg=#414559"
+set-option -g pane-active-border-style "fg=#8caaee"
 
-# vimのキーバインドでペインを移動する
+# 左ステータス: セッション名
+# Prefixが押されている時は背景色が Red (#e78284) に変わる
+set -g status-left-length 50
+set -g status-left "#{?client_prefix,#[bg=#e78284]#[fg=#303446]#[bold] PREFIX #[bg=#414559]#[fg=#c6d0f5] #S ,#[bg=#8caaee]#[fg=#303446] #S }#[default] "
+
+# 右ステータス: 日付・時刻 | ユーザー@ホスト
+set-option -g status-right-length 100
+set -g status-right "#[fg=#737994,bg=default] %Y-%m-%d %H:%M #[fg=#8caaee,bg=#414559] #(whoami)@#h "
+# 右ステータス: バッテリー残量 (Mac用) を追加
+set -g status-right-length 150
+set -g status-right "#[fg=#737994,bg=default] 🔋 #(pmset -g batt | grep -Eo '[0-9]+%%') #[fg=#8caaee,bg=#414559] %Y-%m-%d %H:%M #[fg=#303446,bg=#ca9ee6,bold] #(whoami)@#h "
+
+# ウィンドウリスト
+set -g status-justify centre
+setw -g window-status-separator ""
+
+# 非アクティブなウィンドウ
+setw -g window-status-style "fg=#c6d0f5,bg=#303446"
+setw -g window-status-format " #I:#W "
+
+# アクティブなウィンドウ
+setw -g window-status-current-style "fg=#303446,bg=#ca9ee6,bold"
+# ウィンドウリストのアクティブ表示に条件分岐を追加
+setw -g window-status-current-format "#{?client_prefix,#[fg=#303446]#[bg=#e5c890]#[bold],#[fg=#303446]#[bg=#ca9ee6]#[bold]} #I:#W#F "
+
+# コピーモード中の選択範囲
+setw -g mode-style "bg=#626880,fg=#c6d0f5"
+
+# fzf の配色を Catppuccin Frappe に合わせる
+set-environment -g FZF_DEFAULT_OPTS ' \
+  --color=bg+:#414559,bg:#303446,spinner:#f2d5cf,hl:#e78284 \
+  --color=fg:#c6d0f5,header:#e78284,info:#ca9ee6,pointer:#f2d5cf \
+  --color=marker:#f2d5cf,fg+:#c6d0f5,prompt:#ca9ee6,hl+:#e78284'
+
+##### =====================================================
+##### セッション切替
+##### =====================================================
+
+# Prefix + s でセッションを曖昧検索して切り替える
+bind s display-popup -E "tmux list-sessions | fzf --reverse --header 'Switch Session' | cut -d: -f1 | xargs tmux switch-client -t"
+
+# [Prefix + f] sesh を使った「プロジェクト/セッション」爆速切り替え
+# display-popup: 画面中央に浮き上がるウィンドウ（ポップアップ）を作成
+#   -E: ポップアップ内で実行したコマンドが終了したら、自動でウィンドウを閉じる
+#   -w / -h: ポップアップの幅(width)と高さ(height)を画面全体の何%にするか指定
+bind "f" display-popup -E -w 80% -h 70% "sesh connect \"$(
+  # 1. sesh list で候補を表示
+  #   -i: インタラクティブモード。tmuxセッションだけでなくzoxideの履歴も含む
+  sesh list -i | \
+  # 2. fzf で絞り込み（曖昧検索）
+  fzf --no-sort --ansi \
+    --border-label ' sesh: プロジェクト選択 ' \
+    --prompt '⚡ ' \
+    --header ' ^a:全て  ^t:tmux  ^z:zoxide  ^g:設定  ^d:履歴 ' \
+    # 3. fzf 実行中にキー（Ctrl + 文字）でリストを動的に書き換える（リロード）
+    #   change-prompt: 左下のアイコン(⚡)を変更
+    #   reload: sesh のフィルタ機能を使ってリストを再取得
+    --bind 'ctrl-a:change-prompt(⚡ )+reload(sesh list -i)' \
+    --bind 'ctrl-t:change-prompt(🪟 )+reload(sesh list -it)' \
+    --bind 'ctrl-z:change-prompt(📂 )+reload(sesh list -iz)' \
+    --bind 'ctrl-g:change-prompt(⚙️ )+reload(sesh list -ic)' \
+    --bind 'ctrl-d:change-prompt(📜 )+reload(sesh list -id)'
+)\""
+
+# -----------------------------------------------------------------------------
+# Vim と tmux のペイン移動を統合 (smart-pane-navigation)
+# -----------------------------------------------------------------------------
+# 現在のペインが Vim (n?vim) かどうかを判定する変数
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+# Ctrl + hjkl で Vim の分割と tmux のペインをシームレスに移動
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+
+# tmux 3.0 以降のための微調整
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\ '  'select-pane -l'"
+
+# コピーモード中も Ctrl + hjkl で移動できるようにする
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+
+
+##### =====================================================
+##### Vimライク操作
+##### =====================================================
+
+# ペイン移動
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# vimのキーバインドでペインをリサイズする
+# ペインリサイズ
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 
-# 画面分割や新しいタブで新しいpaneを作った際に、その新しいシェルのカレントディレクトリは、命令を出したディレクトリではなくホームディレクトリになったしまう。
-# カレントディレクトリに変更
+##### =====================================================
+##### Window / Pane 操作
+##### =====================================================
+
+# 新しいウィンドウ・ペインを現在のディレクトリで開く
 bind c new-window -c "#{pane_current_path}"
-
-# | でペインを縦分割する
 bind | split-window -h -c "#{pane_current_path}"
-
-# - でペインを縦分割する
 bind - split-window -v -c "#{pane_current_path}"
 
-bind-key -n M-n next-window      # Option + n で次（M- = Alt/Option）
+# Option(Alt) キーを使った操作
+# Option + n/p: 次の/前のウィンドウへ移動
+bind-key -n M-n next-window
 bind-key -n M-p previous-window
 
-# Option + h/l で左右のペイン移動（vimライク）
+# Option(Alt) + hjkl: ペイン間移動
 bind-key -n M-h select-pane -L
-bind-key -n M-l select-pane -R
 bind-key -n M-j select-pane -D
 bind-key -n M-k select-pane -U
+bind-key -n M-l select-pane -R
 
-# Option + 数字で直接ウィンドウ選択（ブラウザ感覚）
+# Option(Alt) + 数字: ウィンドウへ移動
 bind-key -n M-1 select-window -t :=1
 bind-key -n M-2 select-window -t :=2
 bind-key -n M-3 select-window -t :=3
@@ -126,75 +207,112 @@ bind-key -n M-8 select-window -t :=8
 bind-key -n M-9 select-window -t :=9
 bind-key -n M-0 select-window -t :=0
 
-# 番号基準値を変更
-set-option -g base-index 1
 
-# マウス操作を有効にする
-set-option -g mouse on
-set -g mouse on
+# ==========================================
+# マウス
+# ==========================================
 
-# フォーカスイベントを有効にして、weztermとの互換性を向上
-set-option -g focus-events on
-# マウスでペインサイズ変更を有効化
+# マウスホイールによるスクロール操作
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
-bind -n WheelDownPane select-pane -t= \;                 send-keys -M
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-#bind-key -T edit-mode-vi WheelUpPane send-keys -X scroll-up
-#bind-key -T edit-mode-vi WheelDownPane send-keys -X scroll-down
-#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
-# コピーモードを設定する
-# コピーモードでvimキーバインドを使う
-set-window-option -g mode-keys vi
-setw -g mode-keys vi
+##### =====================================================
+##### Copy Mode (vim)
+##### =====================================================
 
-# OS が Linux の時は xsel を使う
-if-shell -b '[ "$(uname)" = "Linux" ]' {
-  set -s copy-command "xsel --clipboard --input"
-  bind-key -T copy-mode-vi v send-keys -X begin-selection
-  bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -bi"
-  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -bi"
-  display "using xsel as copy-command"
-}
-
-## ☆クリップボートとの連携（Mac）
-if-shell -b '[ "$(uname)" = "Darwin" ]' {
-  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-  bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-
-  set-window-option -g mode-keys vi
-  bind-key -T copy-mode-vi v send-keys -X begin-selection
-  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-  bind-key -T copy-mode-vi MouseDrag1Pane send-keys -X begin-selection
-  bind-key -T copy-mode-vi MouseUp1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-}
-
-set -g set-clipboard external     # macOSではこれでpbcopy/pbpasteと連携
-
-# 'v' で選択を始める
+# コピーモードでVimキーバインド
+set -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
-
-# 'V' で行選択
 bind -T copy-mode-vi V send -X select-line
-
-# 'C-v' で矩形選択
 bind -T copy-mode-vi C-v send -X rectangle-toggle
-
-# 'y' でヤンク
 bind -T copy-mode-vi y send -X copy-selection
-
-# 'Y' で行ヤンク
 bind -T copy-mode-vi Y send -X copy-line
 
-# 'C-p'でペースト
+# ペースト
 bind-key C-S-p paste-buffer
 
-# Option + down でpopup/floating windowを開く
-bind -n M-down popup -xC -yC -w85% -h90% -d '#{pane_current_path}' -E 'tmux a -t flwin || tmux new -s flwin'
 
-# ワンショットコマンドを打つ例。ここではtigコマンド。
-# bind Space popup -xC -yC -w85% -h90% -d '#{pane_current_path}' -E 'ls'
+##### =====================================================
+##### Clipboard OS別のクリップボード連携
+##### =====================================================
+
+# Linux
+if-shell -b '[ "$(uname)" = "Linux" ]' {
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -bi"
+  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -bi"
+}
+
+# macOS
+if-shell -b '[ "$(uname)" = "Darwin" ]' {
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+  bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+}
+
+set -g set-clipboard external
+
+
+##### =====================================================
+##### Popup
+##### =====================================================
+
+# ポップアップの枠線の色を Frappe の Blue に設定 (お好みで)
+set -g popup-border-style "fg=#8caaee"
+# ポップアップのタイトル線の色を Frappe の Mauve に設定
+set -g popup-border-lines "rounded"
+
+# Option + down でポップアップウィンドウを表示
+bind -n M-down popup -xC -yC -w85% -h90% \
+  -d '#{pane_current_path}' \
+  -E 'tmux a -t flwin || tmux new -s flwin'
+
+# 1. Git操作 (lazygit または tig)
+# Prefix + g で現在のディレクトリを対象に Git UI を開く
+# -d '#{pane_current_path}': 現在開いているパネルのディレクトリでツールを開始する
+bind g display-popup -E -w 90% -h 90% -d '#{pane_current_path}' "lazygit"
+
+# 2. システムモニター (btop または htop)
+# Prefix + t でリソース使用状況を確認
+bind t display-popup -E -w 80% -h 80% "btop"
+
+# 3. 計算用 REPL (Python)
+# Prefix + p でサッと計算やスクリプト確認ができる Python 実行環境を開く
+bind p display-popup -E -w 70% -h 70% "python3"
+
+# (おまけ) Node.js がお好みの場合はこちら
+# bind n display-popup -E -w 70% -h 70% "node"
+
+
+
+##### =====================================================
+##### Catppuccin Frappe Theme (Seamless Edition)
+##### =====================================================
+
+# 1. ステータスバーを下に配置 (Lualineと連結させるため)
+set-option -g status-position bottom
+
+# 2. 背景色を Lualine の中間部分の背景色 (#414559) と一致させる
+# これにより、境界線が消えて一体化します
+set-option -g status-style "bg=#414559,fg=#c6d0f5"
+
+# 3. 左ステータス (セッション名)
+# Lualine の左端 (Mauve色) と似た雰囲気にする
+set -g status-left-length 50
+set -g status-left "#{?client_prefix,#[bg=#e78284]#[fg=#303446]#[bold] PREFIX #[bg=#51576d]#[fg=#c6d0f5] ,#[bg=#ca9ee6]#[fg=#303446]#[bold] 󱗼 #S }#[default]"
+
+# 4. 右ステータス (日付・時刻)
+# Lualine の右端のデザインと統一
+set-option -g status-right-length 100
+set -g status-right "#[fg=#737994,bg=#414559] %Y-%m-%d %H:%M #[fg=#303446,bg=#8caaee,bold] #(whoami)@#h "
+
+# 5. ウィンドウリスト (中央配置)
+set -g status-justify centre
+setw -g window-status-separator " │ "
+
+# 非アクティブウィンドウ (背景をステータスバーと同化させる)
+setw -g window-status-style "fg=#c6d0f5,bg=#414559"
+setw -g window-status-format "#I:#W"
+
+# アクティブウィンドウ (少し明るい色で浮かび上がらせる)
+setw -g window-status-current-format "#{?client_prefix,#[fg=#e5c890]#[bg=#414559]#[bold],#[fg=#8caaee]#[bg=#414559]#[bold]} #I:#W#F "
